[tool.poetry]
name = "flake8-annotations-nix-test"
version = "0.1.0"
description = "Test case for poetry2nix"
authors = ["Lucas Savva <lucas@m1cr0man.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8-annotations = "^2.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
